--- a/pom.xml
+++ b/pom.xml
@@ -12,10 +12,10 @@
 	<artifactId>CRUD</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>CRUD</name>
-	<description>Demo project for Spring Boot</description>
+	<description>Spring boot simple CRUD application</description>
 
 	<properties>
-		<java.version>1.8</java.version>
+		<java.version>11</java.version>
 	</properties>
 
 	<dependencies>
@@ -43,6 +43,16 @@
 					<artifactId>junit-vintage-engine</artifactId>
 				</exclusion>
 			</exclusions>
+		</dependency>
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<version>1.18.24</version>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-validation</artifactId>
 		</dependency>
 	</dependencies>
 
