--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,14 @@
 
 server.port=9090
+server.servlet.context-path=/api/
+
+
 spring.jpa.database=POSTGRESQL
 spring.datasource.platform=postgres
 spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username=postgres
-spring.datasource.password=1995eileen2008
+spring.datasource.password=admin
 spring.jpa.show-sql=true
-#spring.jpa.generate-ddl=true
-#spring.jpa.hibernate.ddl-auto=create-drop
-#spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
