--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,7 @@
-
-server.port=9090
 server.servlet.context-path=/api/
 
-
 spring.jpa.database=POSTGRESQL
-spring.datasource.platform=postgres
+spring.sql.init.platform=postgres
 spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username=postgres
 spring.datasource.password=admin
